# gem-gallery

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config
doc/: .$Microservices.drawio.bkp  .$Microservices.drawio.dtmp  Ideas.txt  Microservices.drawio
mgp-caddy/: Cargo.toml  README.md  build.rs
mgp-caddy/.cargo/: config
mgp-caddy/dep/: build-all.sh
mgp-caddy/dep/crate/rust-ffmpeg/: Cargo.toml
mgp-caddy/dep/crate/rust-ffmpeg-sys/: Cargo.toml  build.rs
mgp-caddy/dep/crate/rust-ffmpeg/src/codec/: id.rs
mgp-caddy/dep/crate/rust-ffmpeg/src/util/format/: pixel.rs
mgp-caddy/dep/lib/x86_64-unknown-linux-gnu/include/libavutil/: ffversion.h
mgp-caddy/dep/lib/x86_64-unknown-linux-gnu/lib/: libmp3lame.la  libogg.la  libopus.la  libvorbis.la  libvorbisenc.la  libvorbisfile.la
mgp-caddy/dep/lib/x86_64-unknown-linux-gnu/lib/pkgconfig/: dav1d.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc  ogg.pc  opus.pc  vorbis.pc  vorbisenc.pc  vorbisfile.pc  vpx.pc
mgp-caddy/src/: convert.rs  fs.rs  main.rs
mgp-messages/: Cargo.toml  README.md
mgp-messages/migrations/2023-07-02-005110_users/: up.sql
mgp-messages/migrations/2023-07-02-005128_userdata/: down.sql  up.sql
mgp-messages/migrations/2023-07-02-006817_posts/: down.sql  up.sql
mgp-messages/migrations/2023-07-10-212332_userrelations/: down.sql  up.sql
mgp-messages/migrations/2023-07-10-212629_postrelations/: down.sql  up.sql
mgp-messages/src/: main.rs  models.rs  query.rs  schema.rs
